tests/ui/attributes/malformed-fn-align.stderr
error: malformed `align` attribute input
  --> $DIR/malformed-fn-align.rs:5:5
   |
LL |     #[align]
   |     ^^^^^^^^ help: must be of the form: `#[align(alignment)]`

error: malformed `align` attribute input
  --> $DIR/malformed-fn-align.rs:9:1
   |
LL | #[align = 16]
   | ^^^^^^^^^^^^^ help: must be of the form: `#[align(alignment)]`

error[E0589]: invalid alignment value: not an unsuffixed integer
  --> $DIR/malformed-fn-align.rs:12:9
   |
LL | #[align("hello")]
   |         ^^^^^^^

error[E0589]: invalid alignment value: not a power of two
  --> $DIR/malformed-fn-align.rs:15:9
   |
LL | #[align(0)]
   |         ^

error: `#[repr(align(...))]` is not supported on function items
  --> $DIR/malformed-fn-align.rs:18:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^
   |
help: use `#[align(...)]` instead
  --> $DIR/malformed-fn-align.rs:18:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^

error: `#[align(...)]` is not supported on struct items
  --> $DIR/malformed-fn-align.rs:21:1
   |
LL | #[align(16)]
   | ^^^^^^^^^^^^
   |
help: use `#[repr(align(...))]` instead
   |
LL - #[align(16)]
LL + #[repr(align(16))]
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0589`.
